src/css/pendota_ui.css
/* Reset css for all pendota elements */
._pendota-wrapper_,
._pendota-wrapper_ *,
._pendota-wrapper_ *:focus,
._pendota-wrapper_ *:hover,
._pendota-wrapper_ *:visited,
._pendota-wrapper_ a,
._pendota-wrapper_ input,
._pendota-wrapper_ h5,
._pendota-wrapper_ div {
	--pendo-teal: #128297;
	--pendo-dark-teal: #016479;
	--pendo-pink: #ec2059;
	--pendo-mid-pink: #f2a5ba;
	--pendo-mid-pink-40: #eb8da766;
	--pendo-charcoal: #2f3641;
	--light-gray: #aaaaaa;
	--light-pink: #f0ccd6;
	background: none;
	border: none;
	bottom: auto;
	box-shadow: none;
	box-sizing: border-box;
	clear: none;
	color: #222222;
	cursor: default;
	fill: none;
	float: none;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
		"Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
	font-size: inherit;
	font-style: normal;
	font-weight: normal;
	left: auto;
	letter-spacing: normal;
	line-height: normal;
	margin: 0;
	max-height: none;
	max-width: none;
	min-height: 0;
	min-width: 0;
	overflow: visible;
	padding: 0;
	position: static;
	right: auto;
	text-align: left;
	text-decoration: none;
	text-indent: 0;
	text-transform: none;
	top: auto;
	vertical-align: middle;
	visibility: visible;
	white-space: normal;
	z-index: unset;
}

._pendota-wrapper_ {
	font-size: medium;
	position: fixed;
	z-index: 99999999999;
}

._pendota-wrapper_ ._pendota-hidden_ {
	display: none !important;
}

._pendota-wrapper_ ._pendota-disabled_ {
	opacity: 50%;
}

._pendota-wrapper_ ._pendota_container_ {
	overflow-y: auto;
	min-height: 450px;
	max-width: 350px;
	width: 350px;
	border: 2px solid rgba(0, 0, 0, 0.3);
	border-radius: 3px;
	background: white;
	padding: 10px 20px;
	margin: 0;
	position: absolute;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

._pendota-wrapper_ ._pendota-draggable_ {
	touch-action: none;
	user-select: none;
}

._pendota-wrapper_ #_pendota-lock-icon_ {
	display: block;
	height: 32px;
	margin: 0 auto;
	width: 32px;
	width: fit-content;
/* 	vertical-align: middle; */
}

._pendota-wrapper_ ._pendota-feather-locked_,
._pendota-wrapper_ ._pendota-feather-unlocked_ {
	height: 32px;
	width: 32px;
}

._pendota-wrapper_ ._pendota-feather-locked_ {
	stroke: var(--pendo-charcoal);
}

._pendota-wrapper_ ._pendota-feather-locked_:hover {
	stroke: var(--light-gray);
}

._pendota-wrapper_ ._pendota-icon-locked_ * {
	cursor: pointer;
}

._pendota-wrapper_ ._pendota-feather-unlocked_ {
/* 	height: 18px;
	width: 18px; */
	stroke: #a9a9a9;
}

._pendota-wrapper_ #_pendota-tag-assistant_ {
	display: block;
	position: fixed;
	top: 15px;
	right: 45px;
	margin: 0 auto;
	overflow: visible;
	z-index: 99999999999;
}

._pendota-wrapper_ #_pendota-status_ {
	margin: 0 auto;
	min-height: 36px;
	width: fit-content;
}

._pendota-wrapper_ #_pendota_lock-message_ {
	/* avoid an excessively wide status text */
	display: inline-block;
	font-size: 12px;
	font-weight: 500;
	margin: auto;
	min-height: 32px;
	padding-left: 5px;
	padding-top: 10px;
	text-align: center;
}

._pendota-wrapper_ h3._pendota_ {
	color: #ec2059;
	font-weight: 700;
	font-size: 24px;
	padding-left: 10px;
	margin: 0 auto;
}

._pendota-wrapper_ h5._pendota_ {
	font-size: 14px;
	font-weight: 700;
	display: inline-block;
	padding-bottom: 5px;
}

._pendota-wrapper_ #_pendota-element-details_ {
	margin-bottom: 16px;
}

._pendota-wrapper_ ._pendota_form-control_ {
	border-radius: 3px;
	padding: 6px 4px;
	background-color: #efefef;
	width: 100%;
	font-size: 12px;
    margin: 0 auto;
	line-height: 12px;
}

._pendota-wrapper_ ._pendota-select-dropdown_ {
	background-color: white;
	border: 1px solid var(--pendo-charcoal);
	border-radius: 3px;
	font-size: 12px;
    padding: 4px;
	margin: 0 auto 8px;
	width: 60%;
	z-index: 10000;
}

._pendota-wrapper_ ._pendota_form-group_ {
	max-height: 160px;
	overflow: auto;
}

._pendota-wrapper_ #_pendota-tag-builder-table_ {
	border-collapse: separate;
	border-spacing: 0;
}

._pendota-wrapper_ #_pendota-sizzler-count_ {
	font-size: 14px;
	color: #222222;
	line-height: 27px;
	text-align: center;
}

._pendota-wrapper_ #_pendota-tag-builder-table_ td {
	vertical-align: top;
}

._pendota-wrapper_ #_pendota-tag-builder_ {
	border: 1px solid var(--pendo-teal);
	border-radius: 3px;
	font-size: 12px;
	margin-right: 8px;
	min-height: 65px;
}

._pendota-wrapper_ ._pendota-button_ {
	cursor: pointer;
	display: block;
	height: 20px;
	margin: 4px auto;
	width: 20px;
}

._pendota-wrapper_ ._pendota-text-button_ {
	border: 1px solid var(--pendo-teal);
	border-radius: 3px;
	color: var(--pendo-teal);
	cursor: pointer;
	display: block;
	height: 28px;
	margin: 0 auto;
	text-align: center;
	width: 36px;
}

._pendota-wrapper_ ._pendota-text-button_ * {
	cursor: pointer;
}

._pendota-wrapper_ ._pendota-text-button_._pendota-text-button-clicked_ {
	border-color: var(--pendo-pink);
	background-color: var(--pendo-pink);
	color: white;
}

._pendota-wrapper_ ._pendota-button_ > *:hover {
	stroke: var(--pendo-charcoal);
}

._pendota-wrapper_ ._pendota-button_ > * {
	stroke: var(--light-gray);
}

._pendota-wrapper_ ._pendota-button_ * {
	cursor: pointer;
}

._pendota-wrapper_ ._pendota-button-icon_ {
	height: 20px;
	vertical-align: baseline;
	width: 20px;
}

._pendota-wrapper_ ._pendota-text-button-inner_ {
	color: inherit;
	display: inline-block;
	font-size: 11px;
	font-weight: bold;
	line-height: 28px;
	padding-left: 1px;
	text-align: center;
	vertical-align: baseline;
	width: 100%;
}

._pendota-wrapper_ #_pendota-tag-builder-placeholder_ {
	margin-top: 4px;
	padding-left: 4px;
}

._pendota-wrapper_ ._pendota-tag-elm_ {
	background-color: var(--light-pink);
	border-radius: 3px;
	color: black;
	display: inline-block;
	font-size: 12px;
	margin: 2px;
	padding: 0 4px;
}

._pendota-wrapper_ ._pendota-tag-elm_._pendota-active-tag-elm_ {
	background-color: var(--pendo-mid-pink);
	box-shadow: 0 0 4px 2px var(--pendo-mid-pink-40);
}

._pendota-wrapper_ ._pendota-tag-item_ {
	color: black;
	font-size: inherit;
	display: inline-block;
	position: relative;
	transition: color ease-out 0.2s;
	vertical-align: middle;
	white-space: nowrap;
}

._pendota-wrapper_ ._pendota-tag-item_:hover {
	color: var(--pendo-pink);
}

._pendota-wrapper_ ._pendota-tag-item-text_ {
	color: inherit;
	display: inline-block;
	font-size: inherit;
	max-width: 190px;
	overflow: hidden;
	padding: 4px 0;
	text-overflow: ellipsis;
	vertical-align: middle;
	white-space: nowrap;
}

._pendota-wrapper_ ._pendota-tag-item-dropdown_ {
	background-color: white;
	border: 1px solid var(--light-gray);
	border-radius: 3px;
	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
	display: none;
	position: absolute;
	min-width: 75px;
    overflow: visible;
    z-index: 10000;
}

._pendota-wrapper_ ._pendota-tag-item-dd-item_ {
	background-color: white;
	color: black;
	line-height: 32px;
	padding-left: 8px;
	padding-right: 14px;
	text-decoration: none;
	display: block;
	overflow: visible;
	position: relative;
	white-space: nowrap;
}

._pendota-wrapper_ ._pendota-tag-item-dd-item_:hover {
	background-color: #f1f1f1;
	color: black;
	padding-left: 8px;
	padding-right: 14px;
	text-decoration: none;
	display: block;
}

._pendota-wrapper_ ._pendota-tag-item-dd-item_._pendota-has-side-input_:after {
	content: "";
	width: 0;
	height: 0;
	border-top: 4px solid transparent;
	border-bottom: 4px solid transparent;
	border-left: 4px solid black;
	position: absolute;
	right: 4px;
	top: 12px;
}

._pendota-wrapper_ ._pendota-tag-item-dd-item_:first-child {
	border-radius: 3px 4px 0 0;
}

._pendota-wrapper_ ._pendota-tag-item-dd-item_:last-child {
	border-radius: 0 0 4px 4px;
}

._pendota-wrapper_ ._pendota-tag-item-dd-item_:only-child {
	border-radius: 3px;
}

._pendota-wrapper_ ._pendota-tag-item-dd-inp-div_ {
	background-color: inherit;
	border-top: 1px solid var(--light-gray);
	border-right: 1px solid var(--light-gray);
	border-bottom: 1px solid var(--light-gray);
	border-radius: 0 4px 4px 0;
	display: none;
	position: absolute;
	left: 100%;
	min-width: 100px;
	top: -1px;
	white-space: nowrap;
}

._pendota-wrapper_ ._pendota-tag-item-dd-inp_ {
	background-color: white;
	border: 1px solid var(--pendo-charcoal);
	border-radius: 3px;
	display: inline-block;
	min-height: 40px;
	min-width: 200px;
	margin: 4px;
	padding: 6px 4px;
}

._pendota-wrapper_ ._pendota-tag-item-dd-inp-submit_ {
	background-color: var(--pendo-teal);
	border-radius: 3px;
	color: white;
	display: inline-block;
	margin: 6px;
	padding: 2px 4px;
}

._pendota-wrapper_ #_pendota-sizzler_ {
	background: #fff;
	border: 1px solid #ccc;
	border-radius: 3px;
    margin: 0 auto;
    min-height: 63px;
}

._pendota-wrapper_ #_pendota-sizzler-icon_._pendota-clicked_ {
	stroke: var(--pendo-pink);
}

._pendota-wrapper_ ._pendota_row-header_ {
	padding-top: 10px;
	margin: 0 auto;
	padding-bottom: 5px;
	display: flex;
	justify-content: space-between;
}

/* ._pendota-wrapper_ ._pendota-arrow-block_ {
	padding-right: 35px;
} */

._pendota-wrapper_ ._pendota-parent-arrow_ {
	height: 20px;
}

._pendota-wrapper_ ._pendota-hide-arrow_ {
	display: none;
}

._pendota-wrapper_ ._pendota-active-arrow_,
._pendota-wrapper_ ._pendota-active-arrow_ * {
	display: inline-block;
	stroke: #222222;
	cursor: pointer !important;
}

._pendota-wrapper_ ._pendota-disabled-arrow_ {
	display: inline-block;
	stroke: #a9a9a9;
}

._pendota-wrapper_ ._pendota_input-row_ {
	margin: 0 auto;
	padding-bottom: 5px;
}

._pendota-wrapper_ #_pendota_target-img_ {
	width: 30px;
	margin: 0 auto;
}

._pendota-wrapper_ #_pendota_exit_img_ {
	color: var(--light-gray);
	font-size: 36px;
	line-height: 0.5;
	stroke: var(--light-gray);
}

._pendota-wrapper_ #_pendota_exit_img_:hover {
	color: var(--pendo-charcoal);
}

._pendota-wrapper_ #_pendota_exit_img_container_ {
	width: 24px;
	position: absolute;
	top: 12px;
	right: 12px;
	bottom: unset;
	left: unset;
}

._pendota-wrapper_ #_pendota_exit_img_,
._pendota-wrapper_ #_pendota_exit_img_ * {
	cursor: pointer;
}

._pendota-wrapper_ #_pendota_title_ {
	padding-bottom: 10px;
	margin: 0 auto;
}

._pendota-wrapper_ #_pendota_header-div_ {
	margin: 10px 15px 5px 0;
}

._pendota-wrapper_ #_pendota_header-div_ table:nth-of-type(1) * {
	cursor: move;
}

._pendota-wrapper_ ._pendota-copy-icon_,
._pendota-wrapper_ ._pendota-addtobuild-icon_ {
	cursor: pointer;
	height: 20px;
}
._pendota-wrapper_ ._pendota-dropdown-show_ {
	display: block;
}

